3.10.3/_sources/plot_types/3D/index.rst.txt


.. _sphx_glr_plot_types_3D:

.. _3D_plots:

3D and volumetric data
----------------------

Plots of three-dimensional :math:`(x,y,z)`, surface :math:`f(x,y)=z`, and
volumetric :math:`V_{x, y, z}` data using the `mpl_toolkits.mplot3d` library.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See bar3d.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_bar3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_bar3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">bar3d(x, y, z, dx, dy, dz)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See fill_between.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_fill_between3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_fill_between3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">fill_between(x1, y1, z1, x2, y2, z2)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See plot.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_plot3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_plot3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot(xs, ys, zs)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See quiver.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_quiver3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_quiver3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">quiver(X, Y, Z, U, V, W)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See scatter.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_scatter3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_scatter3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">scatter(xs, ys, zs)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See stem.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_stem3d_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_stem3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">stem(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See plot_surface.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_surface3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_surface3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_surface(X, Y, Z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See plot_trisurf.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_trisurf3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_trisurf3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_trisurf(x, y, z)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See voxels.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_voxels_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_voxels_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">voxels([x, y, z], filled)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="See plot_wireframe.">

.. only:: html

  .. image:: /plot_types/3D/images/thumb/sphx_glr_wire3d_simple_thumb.png
    :alt:

  :ref:`sphx_glr_plot_types_3D_wire3d_simple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">plot_wireframe(X, Y, Z)</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /plot_types/3D/bar3d_simple
   /plot_types/3D/fill_between3d_simple
   /plot_types/3D/plot3d_simple
   /plot_types/3D/quiver3d_simple
   /plot_types/3D/scatter3d_simple
   /plot_types/3D/stem3d
   /plot_types/3D/surface3d_simple
   /plot_types/3D/trisurf3d_simple
   /plot_types/3D/voxels_simple
   /plot_types/3D/wire3d_simple

